# VectorSearch

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  install_deps.sh
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bktree_test.cpp  cmake_install.cmake  distance_test.cpp  tensor.txt  vsearch_test.cpp
vsearch/: VectorDB.cpp  VectorDB.h  bkt_idex.cpp  bkt_index.h  bkt_parameter_definition_list.h  bktree.h  common.h  common_data_structure.cpp  common_data_structure.h  common_helper.cpp  common_helper.h  common_utils.h  data_utils.h  dataset.h  definition_list.h  distance.h  fine_grained_lock.h  heap.h  index_server.h  kdt_index.cpp  kdt_index.h  kdt_parameter_definition_list.h  kdtree.h  main.cpp  metadata_set.cpp  metadata_set.h  neighborhoodgraph.cpp  neighborhoodgraph.h  query_result_set.h  relativeneighborhoodgraph.h  search_query.h  simple_ini_reader.cpp  simple_ini_reader.h  string_converter.h  vector_index.cpp  vector_index.h  vector_set.cpp  vector_set.h  vectordb.cpp  vsearch.grpc.pb.cc  (+8 more)
